[metadata]
name = urlDNA
version = 0.0.2
author = urlDNA
author_email = urldna@urldna.io
description = urlDNA is a powerful tool for comprehensive URL analysis, advanced brand monitoring, phishing detection, and custom query capabilities. This Python package allows users to interact with the urlDNA API seamlessly through Python.
license = MIT
home-page = https://urldna.io